장바구니 기능  구현중

--- a/src/main/resources/templates/adopt/adoptDetail.html
+++ b/src/main/resources/templates/adopt/adoptDetail.html
@@ -26,7 +26,7 @@
 <table class="table table-hover" style="width: 1500px; margin-left: auto; margin-right: auto;">
     <tr>
         <th>글번호:</th>
-        <td th:text="${adopt.id}"> </td>
+        <td th:text="${adopt.id}" id="adoptId"> </td>
     </tr>
     <tr>
         <th>작성자(보호자):</th>
