--- a/src/main/resources/templates/product/productPaging.html
+++ b/src/main/resources/templates/product/productPaging.html
@@ -30,6 +30,9 @@
 <div th:if="${session.loginEmail == 'admin'}">
     <a href="/productSave" class="btn btn-dark">관리자 상품등록</a>
 </div>
+<!--<div>-->
+<!--    <input type="text" th:value="${member.memberPoint}" readonly>-->
+<!--</div>-->
 
 <!--조회수 순-->
 <div class="container" style="margin-left: auto;margin-right: auto; margin-top: 100px;">
