--- a/src/main/resources/templates/product/productDetail.html
+++ b/src/main/resources/templates/product/productDetail.html
@@ -92,9 +92,14 @@
     <div id="totalArea" class="container" style="width: 1000px">
 
     </div>
+    <div id="orderArea">
+        <a th:href="@{|/orderSavePage/${session.loginEmail}|}" class="btn btn-dark">구매하기</a>
+        <div id="orderArea2">
+
+        </div>
+    </div>
 
 </div>
-
 <div class="container mt-5" style="margin-top: 500px">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -108,6 +113,7 @@
     </footer>
 </div>
 </body>
+
 <script>
    const saveCart=()=>{
        const memberEmail =document.getElementById("memberEmail").value;
@@ -127,35 +133,39 @@
                output += "<tr><th>번호</th>";
                output += "<th>상품명</th>";
                output += "<th>가격</th>";
-               output += "<th>상품삭제</th></tr>";
+               output += "<th>상품빼기 <button value='x' onclick='deleteCart()' class='btn btn-dark'>클릭</button></th></tr>";
                for(let i in cartList){
                    output += "<tr>";
                    output += "<td id='cartId'>"+cartList[i].id+"</td>";
                    output += "<td>"+cartList[i].productName+"</td>";
                    output += "<td>"+cartList[i].price+"</td>";
-                   output += "<td><button value='x' onclick='deleteCart()'>x</button></td>"
+                   output += "<td></td>"
                    output += "</tr>";
+
                }
                output += "</table>";
                document.getElementById('cartArea').innerHTML = output;
+               if(cartList != null) {
+                   $.ajax({
+                       type: "post",
+                       url: "/findTotal",
+                       data: {
+                           memberEmail: memberEmail
+                       },
+                       dateType: "json",
+                       success: function (cartDTO) {
+                           console.log(cartDTO)
+                           document.getElementById("totalArea").innerHTML = "합계:\n" +
+                               "        <span id=\"totalArea2\" style=\"float: right; width: 1000px;\"></span>"
+                           document.getElementById("totalArea2").innerText = cartDTO.totalPrice + "원";
 
-               $.ajax({
-                   type:"post",
-                   url:"/findTotal",
-                   data:{
-                       memberEmail:memberEmail
-                   },
-                   dateType: "json",
-                   success: function (cartDTO){
-                       console.log(cartDTO)
-                       document.getElementById("totalArea").innerHTML="합계:\n" +
-                           "        <span id=\"totalArea2\" style=\"float: right;\"></span>"
-                       document.getElementById("totalArea2").innerText =cartDTO.totalPrice+"원";
-                   },
-                   error: function (ck) {
 
-                   }
-               })
+                       },
+                       error: function (ck) {
+
+                       }
+                   })
+               }
 
            },
            error: function (ck) {
@@ -165,64 +175,64 @@
 
 
    }
-</script>
-<script>
-    const deleteCart=()=>{
-        const memberEmail =document.getElementById("memberEmail").value;
-        const productId = document.getElementById("productId").value;
-        const cartId = document.getElementById("cartId").innerText;
 
-        $.ajax({
-            type:"post",
-            url:"/deleteCart",
-            data:{
-                memberEmail:memberEmail,
-                productId:productId,
-                cartId:cartId
-            },
-            dateType: "json",
-            success: function (cartList){
-                let output = "<h2><strong>장바구니</strong></h2><br>"
-                output += "<table class='table table-hover' style=\"margin-left:auto; margin-right: auto; width: 1000px;\">";
-                output += "<tr><th>번호</th>";
-                output += "<th>상품명</th>";
-                output += "<th>가격</th>";
-                output += "<th>상품삭제</th></tr>";
-                for(let i in cartList){
-                    output += "<tr>";
-                    output += "<td id='cartId'>"+cartList[i].id+"</td>";
-                    output += "<td>"+cartList[i].productName+"</td>";
-                    output += "<td>"+cartList[i].price+"</td>";
-                    output += "<td><button value='x' onclick='deleteCart()'>x</button></td>"
-                    output += "</tr>";
-                }
-                output += "</table>";
-                document.getElementById('cartArea').innerHTML = output;
+   const deleteCart=()=>{
+       const memberEmail =document.getElementById("memberEmail").value;
+       const productId = document.getElementById("productId").value;
+       const cartId = document.getElementById("cartId").innerText;
+       $.ajax({
+           type:"post",
+           url:"/deleteCart",
+           data:{
+               memberEmail:memberEmail,
+               productId:productId,
+               cartId:cartId
+           },
+           dateType: "json",
+           success: function (cartList){
+               let output = "<h2><strong>장바구니</strong></h2><br>"
+               output += "<table class='table table-hover' style=\"margin-left:auto; margin-right: auto; width: 1000px;\">";
+               output += "<tr><th>번호</th>";
+               output += "<th>상품명</th>";
+               output += "<th>가격</th>";
+               output += "<th>상품빼기 <button value='x' onclick='deleteCart()' class='btn btn-dark'>클릭</button></th></tr>";
+               for(let i in cartList){
+                   output += "<tr>";
+                   output += "<td id='cartId'>"+cartList[i].id+"</td>";
+                   output += "<td>"+cartList[i].productName+"</td>";
+                   output += "<td>"+cartList[i].price+"</td>";
+                   output += "<td></td>"
+                   output += "</tr>";
+               }
+               output += "</table>";
+               document.getElementById('cartArea').innerHTML = output;
 
-                $.ajax({
-                    type:"post",
-                    url:"/findTotal",
-                    data:{
-                        memberEmail:memberEmail
-                    },
-                    dateType: "json",
-                    success: function (cartDTO){
-                        console.log(cartDTO)
-                        document.getElementById("totalArea").innerHTML="합계:\n" +
-                            "        <span id=\"totalArea2\" style=\"float: right;\"></span>"
-                        document.getElementById("totalArea2").innerText =cartDTO.totalPrice+"원";
-                    },
-                    error: function (ck) {
+               $.ajax({
+                   type: "post",
+                   url: "/findTotal",
+                   data: {
+                       memberEmail: memberEmail
+                   },
+                   dateType: "json",
+                   success: function (cartDTO) {
+                       console.log(cartDTO)
+                       document.getElementById("totalArea").innerHTML = "합계:\n" +
+                           "        <span id=\"totalArea2\" style=\"float: right; width: 1000px;\"></span>"
+                       document.getElementById("totalArea2").innerText = cartDTO.totalPrice + "원";
 
-                    }
-                })
+                   },
+                   error: function (ck) {
 
-            },
-            error: function (ck) {
+                   }
+               })
 
-            }
-        })
-    }
+
+           },
+           error: function (ck) {
+
+           }
+       })
+   }
 </script>
 <script th:inline="javascript">
     const likeSave=()=>{
