결제 후 장바구니 삭제

--- a/src/main/resources/templates/order/orderSuccess.html
+++ b/src/main/resources/templates/order/orderSuccess.html
@@ -31,7 +31,7 @@
 <body>
 <th:block th:replace="header/header :: header"></th:block>
 <div class="container input-group" style="margin-top: 300px; ">
-  <h1><strong>결제를 완료하였습니다. 아래 주소로 배송이 시작됩니다.</strong></h1>
+  <h1 style="margin-left: auto; margin-right: auto; margin-bottom: 50px"><strong>결제를 완료하였습니다. <br> 아래 주소로 배송이 시작됩니다.</strong></h1>
   <table class="table table-hover" style="width: 800px; margin-left: auto; margin-right: auto;">
 
     <tr>
