--- a/src/main/resources/templates/order/orderFail.html
+++ b/src/main/resources/templates/order/orderFail.html
@@ -22,7 +22,7 @@
   <h2 style="text-align: center">잔액이 부족합니다.<br> 포인트를 충전 후 <br> 다시  <br> 결제 부탁드립니다. </h2>
     <a href="/moneyCharging" class="btn btn-warning">충전하기</a>
 </div>
-<div style="background-color: #d1f6a7">
+<div>
   <div class="container" >
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
